# rangarr

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  compose.example.yaml  config.example.yaml  pre-push.sh  pyproject.toml  requirements-dev.txt  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: style-guide.md  technical-audit.md  user-guide.md
rangarr/: __init__.py  config_parser.py  main.py  test_config_loader.py  test_config_parser.py  test_env_config.py  test_main.py  test_main_formatters.py  validators.py
rangarr/clients/: __init__.py  arr.py  test_arr_base.py  test_arr_fetch_page_size.py  test_sonarr.py  test_sonarr_sort.py
tests/: builders.py  helpers.py  test_allocator.py  test_arr_client.py  test_arr_client_sort.py  test_config.yaml  test_config_env_vars.yaml  test_config_parser.py  test_env_config.py  test_main.py  test_pipeline.py
tests/integration/: test_search_cycle.py  test_sonarr_season_packs.py  test_tag_filtering.py
tests/system/: test_app_flow.py
tests/unit/: __init__.py  conftest.py  test_config_loader.py  test_config_parser.py  test_config_parser_hours.py  test_main.py  test_main_formatters.py  test_main_search.py  test_validators.py
tests/unit/clients/: __init__.py  test_arr_base.py  test_arr_client_sort.py  test_arr_fetch_page_size.py  test_lidarr.py  test_radarr.py  test_sonarr.py  test_sonarr_sort.py
utils/: pre-push.sh
